--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="icon" type="image/png" href="imgs/s3g.png">
+    <link rel="shortcut icon" type="image/png" href="imgs/s3g.png">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Bootstrap CSS -->
